--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,13 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+form {
+  display: inline-block;
+  align-items: center;
+  width: 35%;
+}
+
+input {
+  text-align: center;
+}
